test/types/string/diten/substringOutOfBounds.good
substringOutOfBounds.chpl:3: error: halt reached - range 21..27 out of bounds for string with length 26
