test/types/string/diten/substringOutOfBounds.chpl
var str = "abcdefghijklmnopqrstuvwxyz";

writeln(str[21..27]);
